[gd_scene load_steps=17 format=2]

[ext_resource path="res://game/bullet/fireball/fireball-sheet.png" type="Texture" id=1]
[ext_resource path="res://game/bullet/fireball/Fireball.gd" type="Script" id=2]
[ext_resource path="res://game/bullet/explosion/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/bullet/explosion/explosion.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=9]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.894318 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 11.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 800.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -600.0
linear_accel_random = 0.2
scale = 0.4
scale_random = 0.1
scale_curve = SubResource( 11 )
anim_speed = 2.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 100.005

[node name="Fireball" type="RigidBody2D" groups=["Bullet"]]
collision_layer = 2
collision_mask = 16
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )
EXPLOSION = ExtResource( 3 )

[node name="Particles" type="Particles2D" parent="."]
material = SubResource( 9 )
position = Vector2( -50, 0 )
amount = 16
visibility_rect = Rect2( -531.18, -43.7589, 538.782, 88.3199 )
process_material = SubResource( 12 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -16, 0 )
scale = Vector2( 0.9, 0.9 )
frames = SubResource( 8 )
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 0.984314, 0.0313726, 0.254902, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ExplosionHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionHitbox"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_explode"]
